--- a/EncoderWrite.csproj
+++ b/EncoderWrite.csproj
@@ -6,14 +6,14 @@
     <ProjectGuid>{0703F944-9685-496A-90B6-40F7644CDB5F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>EncoderWrite</RootNamespace>
-    <AssemblyName>EncoderWrite</AssemblyName>
+    <AssemblyName>cHJvYmFibHl1bmlxdWVuYW1lc2t5bGV0b2Z0</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
+    <OutputPath>.\</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -22,7 +22,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <Optimize>true</Optimize>
-    <OutputPath>cHJvYmFibHl1bmlxdWVuYW1lc2t5bGV0b2Z0\</OutputPath>
+    <OutputPath>.\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ExternalConsole>true</ExternalConsole>
