Win7 compat "fixes" + better read write
Still no å, ä, ö, Å, Ä, or Ö support

--- a/EncoderWrite.csproj
+++ b/EncoderWrite.csproj
@@ -7,7 +7,8 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>EncoderWrite</RootNamespace>
     <AssemblyName>cHJvYmFibHl1bmlxdWVuYW1lc2t5bGV0b2Z0</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,6 +35,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
